# server-health-monitor-cli

./: README.md  health.json  health_report.json  health_report.txt  pyproject.toml
server_monitor/: cli.py  report.py
server_monitor.egg-info/: SOURCES.txt
server_monitor/checks/: cpu.py  disk.py  memory.py  uptime.py
