[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server-monitor"
version = "0.1.0"
description = "Automated Server Health & Log Monitoring Tool"
authors = [
    {name = "Sohail Ali", email = "youremail@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil"
]

[project.scripts]
server-monitor = "server_monitor.cli:main"
